--- a/package.json
+++ b/package.json
@@ -8,21 +8,30 @@
   },
   "author": "dastan iqbal",
   "license": "ISC",
-  "window":{
-    "frame":false,
-    "toolbar":false,
-    "title":"Eyes Relax",
-    "width":250,
-    "height":130,
-    "icon":"res/logo.png",
-    "always-on-top":true,
-    "visible-on-all-workspaces":true,
-    "resizable":false,
-    "transparent":true
+  "window": {
+    "frame": false,
+    "toolbar": false,
+    "title": "Eyes Relax",
+    "width": 250,
+    "height": 130,
+    "icon": "res/logo.png",
+    "always-on-top": true,
+    "visible-on-all-workspaces": true,
+    "resizable": false,
+    "transparent": true
   },
-  "maintainers":[ {
-    "name": "Dastan Iqbal",
-    "email": "ask2iqbal@gmail.com",
-    "web": "https://iaandroid.blogspot.in"
-  }]
+  "dependencies": {
+    "nw-builder": "^2.0.0"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.5",
+    "grunt-nw-builder": "^2.0.0"
+  },
+  "maintainers": [
+    {
+      "name": "Dastan Iqbal",
+      "email": "ask2iqbal@gmail.com",
+      "web": "https://iaandroid.blogspot.in"
+    }
+  ]
 }
